# lab05

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  cmake.yml
include/: print.hpp
sources/: print.cpp
